엔티티 생성

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,9 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 logging.level.org.hibernate.sql=debug
 logging.level.org.hibernate.type.descriptor.sql.spi=trace
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+logging.level.org.springframework.web.reactive=DEBUG
+
+file.path="src/main/resources/file"
